build_log_2.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:processDebugGoogleServices UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
C:\Users\dimit\AndroidStudioProjects\UnipiCityVibe\app\src\main\java\com\example\unipicityvibe\ui\CreateEvent.java:65: error: no suitable constructor found for Event(String,String,String,String,double,EventLocation)
        Event event = new Event(id, title, desc, date, price, location);
                      ^
    constructor Event.Event() is not applicable
      (actual and formal argument lists differ in length)
    constructor Event.Event(String,String,String,long,double,String,EventLocation) is not applicable
      (actual and formal argument lists differ in length)
C:\Users\dimit\AndroidStudioProjects\UnipiCityVibe\app\src\main\java\com\example\unipicityvibe\ui\MainActivity.java:62: error: cannot find symbol
                selectedFragment = new HomeFragment();
                                       ^
  symbol:   class HomeFragment
  location: class MainActivity
C:\Users\dimit\AndroidStudioProjects\UnipiCityVibe\app\src\main\java\com\example\unipicityvibe\ui\MainActivity.java:64: error: cannot find symbol
                selectedFragment = new CreateEventFragment();
                                       ^
  symbol:   class CreateEventFragment
  location: class MainActivity
C:\Users\dimit\AndroidStudioProjects\UnipiCityVibe\app\src\main\java\com\example\unipicityvibe\ui\MainActivity.java:66: error: cannot find symbol
                selectedFragment = new MyBookingsFragment();
                                       ^
  symbol:   class MyBookingsFragment
  location: class MainActivity
C:\Users\dimit\AndroidStudioProjects\UnipiCityVibe\app\src\main\java\com\example\unipicityvibe\ui\MainActivity.java:68: error: cannot find symbol
                selectedFragment = new SettingsFragment();
                                       ^
  symbol:   class SettingsFragment
  location: class MainActivity
C:\Users\dimit\AndroidStudioProjects\UnipiCityVibe\app\src\main\java\com\example\unipicityvibe\ui\MainActivity.java:82: error: cannot find symbol
                    .replace(R.id.nav_host_fragment, new HomeFragment())
                                                         ^
  symbol:   class HomeFragment
  location: class MainActivity
6 errors

[Incubating] Problems report is available at: file:///C:/Users/dimit/AndroidStudioProjects/UnipiCityVibe/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\dimit\AndroidStudioProjects\UnipiCityVibe\app\src\main\java\com\example\unipicityvibe\ui\CreateEvent.java:65: error: no suitable constructor found for Event(String,String,String,String,double,EventLocation)
          Event event = new Event(id, title, desc, date, price, location);
                        ^
      constructor Event.Event() is not applicable
        (actual and formal argument lists differ in length)
      constructor Event.Event(String,String,String,long,double,String,EventLocation) is not applicable
        (actual and formal argument lists differ in length)
  C:\Users\dimit\AndroidStudioProjects\UnipiCityVibe\app\src\main\java\com\example\unipicityvibe\ui\MainActivity.java:62: error: cannot find symbol
                  selectedFragment = new HomeFragment();
                                         ^
    symbol:   class HomeFragment
    location: class MainActivity
  C:\Users\dimit\AndroidStudioProjects\UnipiCityVibe\app\src\main\java\com\example\unipicityvibe\ui\MainActivity.java:64: error: cannot find symbol
                  selectedFragment = new CreateEventFragment();
                                         ^
    symbol:   class CreateEventFragment
    location: class MainActivity
  C:\Users\dimit\AndroidStudioProjects\UnipiCityVibe\app\src\main\java\com\example\unipicityvibe\ui\MainActivity.java:66: error: cannot find symbol
                  selectedFragment = new MyBookingsFragment();
                                         ^
    symbol:   class MyBookingsFragment
    location: class MainActivity
  C:\Users\dimit\AndroidStudioProjects\UnipiCityVibe\app\src\main\java\com\example\unipicityvibe\ui\MainActivity.java:68: error: cannot find symbol
                  selectedFragment = new SettingsFragment();
                                         ^
    symbol:   class SettingsFragment
    location: class MainActivity
  C:\Users\dimit\AndroidStudioProjects\UnipiCityVibe\app\src\main\java\com\example\unipicityvibe\ui\MainActivity.java:82: error: cannot find symbol
                      .replace(R.id.nav_host_fragment, new HomeFragment())
                                                           ^
    symbol:   class HomeFragment
    location: class MainActivity
  6 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 1s
18 actionable tasks: 1 executed, 17 up-to-date
